# soda-unchained

./: Anchor.toml  Cargo.toml  package-lock.json  package.json  readme.md
client/: Cargo.toml  client_config.ini
client/src/: intiailize_test.rs  lib.rs  main.rs
client/src/scripts/: compress_accounts.rs  merkle_tree_initialize.rs  mod.rs
client/src/tests/: intiailize.rs  mod.rs
client/src/utils/: config.rs  log.rs  mod.rs
programs/soda-unchained/: Cargo.toml
programs/soda-unchained/src/: error.rs  lib.rs
programs/soda-unchained/src/instructions/: initialize.rs  membership.rs  mod.rs  transfer.rs
programs/soda-unchained/src/utils/: compressed_mint_to.rs  initialize_state.rs  mod.rs  state.rs
tests/: soda-unchained.ts
ts-scripts/: CompressSol.ts  balances.ts  config.ts  main.ts  package-lock.json  package.json
