[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
light-compressed-token = { version = "0.7.0", features = [
    "cpi",
    "no-entrypoint",
] }
account-compression = { version = "0.7.0", features = ["cpi", "no-entrypoint"] }
solana-sdk = "1.18.18"
tokio = "1.40.0"
soda-unchained = { path = "../programs/soda-unchained" }
light-system-program = { version = "0.7.0", features = [
    "cpi",
    "no-entrypoint",
] }
light-sdk = "0.5.0"
anchor-client = "0.29.0"
configparser = "3.1.0"
eyre = "0.6.12"
