[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
light-compressed-token = { version = "0.7.0", features = [
    "cpi",
    "no-entrypoint",
] }
account-compression = { version = "0.7.0", features = ["cpi", "no-entrypoint"] }
solana-sdk = "1.18.18"
tokio = "1.40.0"
soda-unchained = { path = "../programs/soda-unchained" }
light-system-program = { version = "0.7.0", features = [
    "cpi",
    "no-entrypoint",
] }
light-sdk = "0.5.0"
anchor-client = { version = "0.29.0", features = ["async"] }
configparser = "3.1.0"
eyre = "0.6.12"

#loggers
pretty_env_logger = "0.5.0"
chrono = "0.4.38"
log = "0.4.22"
colored = "2.1.0"
clap = "4.5.17"
photon-api = "0.32.0"
light-test-utils = "0.5.0"
