[package]
name = "soda-unchained"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soda_unchained"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
devnet = []
custom-heap = []
default = ["custom-heap"]
test-sbf = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
light-compressed-token = { version = "1.0.0", features = [
    "cpi",
    "no-entrypoint",
] }
light-hasher = { version = "1.0.0" }
light-utils = { version = "1.0.0" }
account-compression = { version = "1.0.0", features = ["cpi"] }
light-sdk = { version = "0.8.0", features = ["cpi"] }
light-system-program = { version = "1.0.0", features = ["cpi"] }

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk = "1.18.18"

solana-program-test = "1.18.18"
proptest = "1.0.0"
tokio = "1.40.0"
